ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-app-route # name of routing rule 
  namespace: ashu-space  # namespace info 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # ingress className 
  rules:
  - host: k8s.ashutoshh.in # domain website name 
    http:
      paths:
      - path: /  # home page 
        pathType: Prefix
        backend:
          service:
            name: ashu-internal-lb # name of internal LB 
            port:
              number: 80
